# compute-eval-Jupyter-KVM

./: .gitignore  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  README.md  ans_samples.4_correctness_results.jsonl  example_config_evalcorrectness.yaml  example_config_evalcorrectness.yaml.backup.0  example_config_evalcorrectness.yaml.backup.2  example_config_gen_samples.yaml  example_config_gen_samples.yaml.backup  example_config_gen_samples.yaml.backup.0  example_config_gen_samples.yaml.backup.1  example_config_gen_samples.yaml.backup.2  pyproject.toml
compute_eval/: data.py  evaluation.py  execution.py  generate_completions.py  main.py  process_jsonl.py  prompts.py
compute_eval/models/: claude.py  model_interface.py  nim_model.py  openAI_model.py
data/: LICENSE  ans_samples.4.jsonl  cccl_problems_033125.jsonl  combined_problems_033125.jsonl  cuda_problems_033125.jsonl  example_test.jsonl  example_test_generation.jsonl
scripts/: calculate_accuracy.sh
src/: cuda_gpu.cpp  main.cu
